commit 2cd464455a22791c0450ada45a0e0128c637fade
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-23 15:19:03 +0200

    Typos, rebuild static docs

commit 6f6575701d9b028af4b3b1b4b61c36d4989e2812
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-10 14:03:20 +0200

    Add ORCID

commit a33f1bbbf6f6121e8ad40284690a463733a00bc2
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-09 08:48:39 +0200

    Write Step 2 input files on windows

commit 311c4fbcc51ad727551da41569d64e6bc290c2b2
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-10-06 09:30:21 +0200

    Update docs, small bugfix

commit 72d7358581bca88af8c507b6c80791100aaafafc
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-08-24 10:30:11 +0200

    Build for windows using roxygen from master
    
    Now that roxygen can handle UTF8 characters in function
    arguments thanks to Hadley Wickham and Jim Hester

commit a8a2a9d57f40ec7a4fc70df3dc470d88cd10c525
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-07-24 16:31:07 +0200

    Improve Makefile

commit 89fc0926722fbfd6420297194c8b18f5b8a9447d
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-07-24 16:26:51 +0200

    Version bump as I had 0.4.3 in my drat already

commit 762880a78620e50814351248c02d012a7b030fb8
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-07-24 16:23:22 +0200

    Avoid warning about possibly mis-spelled word

commit a2e24495c01f837474b69263a9861a89050cbfd1
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-07-21 11:15:41 +0200

    New Option for Step 1, fix example, update docs
    
    Also add the reference file for testing Step12 input file generation

commit dffa31a5ad5026d4d67327da622f45c00be40584
Author: Johannes Ranke <jranke@uni-bremen.de>
Date:   2017-06-22 08:23:13 +0200

    Add scenario, region and season to run name

commit 0607a619d92d582ba40f9c0c3b32a1d0a8791655
Author: Johannes Ranke <jranke@uni-bremen.de>